# gtm-growth-os

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/: forecast_templates.yaml  operating_standards.yaml  planning_calendar.yaml
docs/runbooks/: annual_planning_cycle.md  pipeline_review.md  qbr_operating_review.md  weekly_forecast_call.md
notebooks/: gtm_growth_os_marimo.py
scripts/: run_app.sh  run_marimo.sh  smoke_test.py
src/gtm_growth_os/: action_tracker.py  capacity.py  capacity_budget.py  compensation.py  data.py  demand_gen.py  exports.py  finance.py  forecast_cadence.py  operating_rhythm.py  pipeline.py  planning_control_tower.py  process_ai.py  scenarios.py  sql.py  standards_library.py  territories.py
src/gtm_growth_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
